--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,45 +1,50 @@
 <html>
-  <body>
-    <table>
-      <thead>
-        <tr>
-          <td>Nome</td>
-          <td>Desrição</td>
-          <td>Preço</td>
-          <td>Quantidade</td>
-        </tr>
-      </thead>
-      <tbody>
-      <% @produtos.each do |produto| %>
-        <tr>
-          <td><%= produto.nome %></td>
-          <td><%= produto.descricao %></td>
-          <td><%= produto.preco %></td>
-          <td><%= produto.quantidade %></td>
-        </tr>
-        <% end %> 
-      </tbody>
+  <%= nav_bar brand: "Loja", brand_link: root_url %>
+  <div class= "container">
+    <body>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <td>Nome</td>
+            <td>Desrição</td>
+            <td>Preço</td>
+            <td>Quantidade</td>
+          </tr>
+        </thead>
+        <tbody>
+        <% @produtos.each do |produto| %>
+          <tr>
+            <td><%= produto.nome %></td>
+            <td><%= produto.descricao %></td>
+            <td><%= produto.preco %></td>
+            <td><%= produto.quantidade %></td>
+          </tr>
+          <% end %> 
+        </tbody>
+        </table>
+        <div class= "alert alert-success" role= "alert">
+          <h4 class= "alert-heading">Produto com Desconto</h4>
+        </div>  
+        <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <td>Nome</td>
+            <td>Desrição</td>
+            <td>Preço</td>
+            <td>Quantidade</td>
+          </tr>
+        </thead>
+        <tbody>
+        <% @produto_com_desconto.each do |produto| %>
+          <tr>
+            <td><%= produto.nome %></td>
+            <td><%= produto.descricao %></td>
+            <td><%= produto.preco %></td>
+            <td><%= produto.quantidade %></td>
+          </tr>
+          <% end %> 
+        </tbody>
       </table>
-      <table>
-      <h3>Produto com Desconto</h3>
-      <thead>
-        <tr>
-          <td>Nome</td>
-          <td>Desrição</td>
-          <td>Preço</td>
-          <td>Quantidade</td>
-        </tr>
-      </thead>
-      <tbody>
-      <% @produto_com_desconto.each do |produto| %>
-        <tr>
-          <td><%= produto.nome %></td>
-          <td><%= produto.descricao %></td>
-          <td><%= produto.preco %></td>
-          <td><%= produto.quantidade %></td>
-        </tr>
-        <% end %> 
-      </tbody>
-    </table>
-  </body>
+    </body>
+  </div>
 </html>
