--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,11 +1,17 @@
+<% if flash[:notice] %>
+    <div class="alert alert-success" role="alert">
+        <%= flash[:notice] %>
+    </div>
+<% end %>
 <table class="table table-bordered table-hover">
   <thead>
     <tr>
       <td>Nome</td>
       <td>Desrição</td>
+      <td>Departamento</td>
       <td>Preço</td>
       <td>Quantidade</td>
-      <td colspan="1"></td>
+      <td colspan="2"></td>
     </tr>
   </thead>
   <tbody>
@@ -13,10 +19,12 @@
     <tr>
       <td><%= produto.nome %></td>
       <td><%= produto.descricao %></td>
+      <td><%= produto.departamento.nome %>
       <td><%= produto.preco %></td>
       <td><%= produto.quantidade %></td>
       <td><%= button_to "Remover", produto, method: :delete, class: "btn btn-danger",
       data: {confirm: "Tem certeza que deseja remover o produto #{produto.nome}?"} %></td>
+      <td><%= link_to "Alterar", edit_produto_path(produto), class: "btn btn-default" %>
     </tr>
     <% end %> 
   </tbody>
