--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -1,4 +1,9 @@
-<%= form_for Produto.new do |form| %>
+<% @produto.errors.full_messages.each do |msg| %>
+  <div class="alert alert-danger" role="alert">
+    <%= msg %>
+  </div>
+<% end %>
+<%= form_for @produto do |form| %>
 <div class="row">
 <div class="col-sm-8">
   <div class="form-group">
@@ -17,8 +22,17 @@
 </div>
 </div>
 
+<div class= "row">
+  <div class= "col-sm-3">
+    <div class= "form-group">
+      <%= form.label :departamento %>
+      <%= form.collection_select :departamento_id, @departamentos, :id, :nome, {}, class:"form-control" %>
+    </div>
+  </div>
+</div>
+
 <div class="row">
-<div class="col-sm-2">
+<div class="col-sm-3">
   <div class="form-group">
     <%= form.label :preco %>
     <%= form.number_field :preco, step:0.01, class:"form-control"%>
@@ -27,7 +41,7 @@
 </div>
 
 <div class="row">
-<div class="col-sm-2">
+<div class="col-sm-3">
   <div class="form-group">
     <%= form.label :quantidade %>
     <%= form.number_field :quantidade, class:"form-control"%>
