--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -15,18 +15,7 @@
     </tr>
   </thead>
   <tbody>
-  <% @produtos.each do |produto| %>
-    <tr>
-      <td><%= produto.nome %></td>
-      <td><%= produto.descricao %></td>
-      <td><%= produto.departamento.nome %>
-      <td><%= produto.preco %></td>
-      <td><%= produto.quantidade %></td>
-      <td><%= button_to "Remover", produto, method: :delete, class: "btn btn-danger",
-      data: {confirm: "Tem certeza que deseja remover o produto #{produto.nome}?"} %></td>
-      <td><%= link_to "Alterar", edit_produto_path(produto), class: "btn btn-default" %>
-    </tr>
-    <% end %> 
+    <%= render @produtos %>
   </tbody>
   </table>
   <div class= "alert alert-success" role= "alert">
@@ -37,18 +26,13 @@
     <tr>
       <td>Nome</td>
       <td>Desrição</td>
+      <td>Departamento</td>
       <td>Preço</td>
       <td>Quantidade</td>
+      <td colspan="2"></td>
     </tr>
   </thead>
   <tbody>
-  <% @produto_com_desconto.each do |produto| %>
-    <tr>
-      <td><%= produto.nome %></td>
-      <td><%= produto.descricao %></td>
-      <td><%= produto.preco %></td>
-      <td><%= produto.quantidade %></td>
-    </tr>
-    <% end %> 
+  <%= render @produto_com_desconto %>
   </tbody>
 </table>
