--- a/app/views/produtos/busca.html.erb
+++ b/app/views/produtos/busca.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <td>Nome</td>
-      <td>Desrição</td>
+      <td>Descrição</td>
       <td>Departamento</td>
       <td>Preço</td>
       <td>Quantidade</td>
