--- a/app/views/produtos/_produto.html.erb
+++ b/app/views/produtos/_produto.html.erb
@@ -1,7 +1,11 @@
 <tr>
   <td><%= produto.nome %></td>
   <td><%= produto.descricao %></td>
-  <td><%= produto.departamento.nome %>
+  <td><%=  if produto.departamento.blank?
+            puts "Sem Departamento!"       
+          else
+            produto.departamento.nome
+          end  %>
   <td><%= produto.preco %></td>
   <td><%= produto.quantidade %></td>
   <td><%= link_to "Alterar", edit_produto_path(produto), class: "btn btn-default" %>
